<?xml version="1.0"?>
<package format="3">
  <name>ros_bt_py</name>
  <version>1.0.0</version>
  <description>A type-safe Behavior Tree library (until the wheels fall off)</description>

  <maintainer email="heppner@fzi.de">Georg Heppner</maintainer>

  <license>BSD-3-Clause</license>

  <url type="website">https://github.com/fzi-forschungszentrum-informatik/ros_bt_py</url>


  <author>Nils Berg</author>
  <author>Kai-Uwe Hermann</author>
  <author email="oberacker@fzi.de">David Oberacker</author>
  <author email="heppner@fzi.de">Georg Heppner</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <build_depend>roslint</build_depend>

  <exec_depend>ros_bt_py_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>python3-jsonpickle</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-simplejson</exec_depend>
  <exec_depend>ros_bt_py_web_server</exec_depend>
  <exec_depend>rosbridge_suite</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rqt_console</exec_depend>
  <exec_depend>catkin</exec_depend>

  <test_depend>code_coverage</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>actionlib_tutorials</test_depend>
  <test_depend>python3-mock</test_depend>
  <test_depend>python3-requests</test_depend>

  <test_depend>python3-autobahn</test_depend>
  <test_depend>python3-twisted</test_depend>
  <export>
  </export>
</package>
