<?xml version="1.0"?>
<package format="2">
  <name>ros_bt_py_msgs</name>
  <version>1.0.0</version>
  <description>Messages for ros_bt_py</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="heppner@fzi.de">Georg Heppner</maintainer>
  
  <author>Nils Berg</author>
  <author>Kai-Uwe Hermann</author>
  <author email="heppner@fzi.de">Georg Heppner</author>
  

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD-3-Clause</license>

  <url type="website">https://github.com/fzi-forschungszentrum-informatik/ros_bt_py</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
