<?xml version="1.0"?>
<package format="3">
  <name>ros_bt_py_web_server</name>
  <version>1.0.0</version>
  <description>A python-tornado based web server wrapper for individual ros packages. Can be used for arbitrary ros packages but is mainly intended for delivery of the ros_bt_py frontend.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="heppner@fzi.de">Georg Heppner</maintainer>

  <license>BSD-3-Clause</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">https://github.com/fzi-forschungszentrum-informatik/ros_bt_py</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author>Kai-Uwe Hermann</author>
  <author email="heppner@fzi.de">Georg Heppner</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-tornado</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-tornado</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-mock</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-mock</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
